Fix commit target button overflow
Overriding is a smell, this should be revisited.

--- a/apps/lite/ui/src/routes/project/$id/workspace/OutlinePanel.module.css
+++ b/apps/lite/ui/src/routes/project/$id/workspace/OutlinePanel.module.css
@@ -206,6 +206,8 @@
 }
 
 .commitTargetComboboxTrigger {
+	/* Override button inline-flex to fix overflow behaviour. */
+	display: block;
 	flex-grow: 1;
 	overflow: hidden;
 	text-overflow: ellipsis;
